WIP: added some content and mobile layout

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <div class="wrapper">
             <h2>About Me</h2>
             <p>
-                I'm a computer science student who is passionate about building things that make a difference.
-                I can help you build your next web project, wheteher it's a wordpress site, a static site, or a full-stack web app.
-                You also want to have your own custom domain? I can help you with that too!
+                I'm a computer science student who is passionate about creating solutions to problems. I can help you
+                build your next web project, wheteher it's a wordpress site or a from scratch static site.
+                You also desire a personalized domain? I can help you with that too!
             </p>
-            <p>Don't hesitate to reach out to me. I would love to help you out!</p>
+            <p>
+                Don't hesitate to reach out to me. I would love to help you out!
+            </p>
         </div>
     </section>
 
@@ -42,7 +44,28 @@
     </section>
 
     <section class="links">
-
+        <ul>
+            <li class="gh">
+                <a href="https://github.com/r0hitm" target="_blank" rel="noopener noreferrer">
+                    <img src="images/gh.svg" alt="Github">
+                </a>
+            </li>
+            <li class="twitter">
+                <a href="https://twitter.com/_r0hitm" target="_blank" rel="noopener noreferrer">
+                    <img src="images/twitter.svg" alt="Twitter">
+                </a>
+            </li>
+            <li class="fiverr">
+                <a href="https://www.fiverr.com/r0hitm" target="_blank" rel="noopener noreferrer">
+                    <img src="images/fiverr.svg" alt="Fiverr">
+                </a>
+            </li>
+            <li class="upwork">
+                <a href="https://www.upwork.com/freelancers/~01b052adae017f5a6d" target="_blank" rel="noopener noreferrer">
+                    <img src="images/upwork.svg" alt="Upwork">
+                </a>
+            </li>
+        </ul>
     </section>
 
     <footer>
