--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="buttons">
         <div class="wrapper">
             <div class="big-bold">
-                <a href="./pages/resume.html">Resume</a>
+                <a href="./pages/404.html">Resume</a>
             </div>
             <div class="big-bold">
-                <a href="./pages/projects.html">Projects</a>
+                <a href="./pages/404.html">Projects</a>
             </div>
             <div class="big-bold">
                 <a href="mailto:rohitm09@proton.me">Hire Me</a>
