implemented new layout and remove links to other pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>👋 Hello, I'm <a href="http://rrohit.me">Rohit Mehta</a></h1>
     </header>
 
-    <section class="about">
-        <div class="wrapper">
+    <div class="grid">
+        <div class="grid-item about">
             <h2>About Me</h2>
             <p>
                 I'm a computer science student who is passionate about creating solutions to problems. I can help you
@@ -27,46 +27,43 @@
                 Don't hesitate to reach out to me. I would love to help you out!
             </p>
         </div>
-    </section>
-
-    <section class="buttons">
-        <div class="wrapper">
+        <div class="grid-item sections">
             <div class="big-bold">
-                <a href="./pages/404.html">Resume</a>
+                <a href="#">Resume</a>
             </div>
             <div class="big-bold">
-                <a href="./pages/404.html">Projects</a>
+                <a href="#">Projects</a>
             </div>
             <div class="big-bold">
                 <a href="mailto:rohitm09@proton.me">Hire Me</a>
             </div>
         </div>
-    </section>
-
-    <section class="links">
-        <ul>
-            <li class="gh">
-                <a href="https://github.com/r0hitm" target="_blank" rel="noopener noreferrer">
-                    <img src="images/gh.svg" alt="Github">
-                </a>
-            </li>
-            <li class="twitter">
-                <a href="https://twitter.com/_r0hitm" target="_blank" rel="noopener noreferrer">
-                    <img src="images/twitter.svg" alt="Twitter">
-                </a>
-            </li>
-            <li class="fiverr">
-                <a href="https://www.fiverr.com/r0hitm" target="_blank" rel="noopener noreferrer">
-                    <img src="images/fiverr.svg" alt="Fiverr">
-                </a>
-            </li>
-            <li class="upwork">
-                <a href="https://www.upwork.com/freelancers/~01b052adae017f5a6d" target="_blank" rel="noopener noreferrer">
-                    <img src="images/upwork.svg" alt="Upwork">
-                </a>
-            </li>
-        </ul>
-    </section>
+        <div class="grid-item links">
+            <ul>
+                <li class="gh">
+                    <a href="https://github.com/r0hitm" target="_blank" rel="noopener noreferrer">
+                        <img src="images/gh.svg" alt="Github">
+                    </a>
+                </li>
+                <li class="twitter">
+                    <a href="https://twitter.com/_r0hitm" target="_blank" rel="noopener noreferrer">
+                        <img src="images/twitter.svg" alt="Twitter">
+                    </a>
+                </li>
+                <li class="fiverr">
+                    <a href="https://www.fiverr.com/r0hitm" target="_blank" rel="noopener noreferrer">
+                        <img src="images/fiverr.svg" alt="Fiverr">
+                    </a>
+                </li>
+                <li class="upwork">
+                    <a href="https://www.upwork.com/freelancers/~01b052adae017f5a6d" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="images/upwork.svg" alt="Upwork">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
     <footer>
         <p>© 2021 Rohit Mehta</p>
