Completed Mobile layout

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>👋 Rohit Mehta</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 
-<body class="wave">
+<body>
     <header>
         <nav>
             <div class="logo">
@@ -48,6 +49,11 @@
                     <img src="images/stack-overflow.svg" alt="My Stack Overflow Profile">
                 </a>
             </li>
+            <li class="itch">
+                <a href="https://avatar-hiro.itch.io/" target="_blank" rel="noopener noreferrer">
+                    <img src="images/itch.svg" alt="My Itch.io Profile">
+                </a>
+            </li>
             <li class="twitter">
                 <a href="https://twitter.com/_r0hitm" target="_blank" rel="noopener noreferrer">
                     <img src="images/twitter.svg" alt="My Twitter Profile">
@@ -57,29 +63,50 @@
     </section>
 
     <section class="projects" id="projects">
+        <!-- showing top 3 projects -->
         <h2>Projects</h2>
         <div class="project">
-            <div class="project-img">
+            <!-- <div class="project-img">
                 <img src="#" alt="icon">
-            </div>
+            </div> -->
             <div class="project-desc">
-                <h3><a href="#">Project Name</a></h3>
+                <h3><a href="https://rrohit.me/todo">Todo App</a></h3>
                 <p>
-                    project Description
+                    A simple todo app built using vanilla js. I built this to learn
+                    classes, ES6 modules.
+                </p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-desc">
+                <h3><a href="https://rrohit.me/calculator">Calculator</a></h3>
+                <p>
+                    A Standard Calculator with a nice UI. I built this to learn
+                    JavaScript basics, and to practice CSS.
+                </p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-desc">
+                <h3><a href="https://rrohit.me/etch-a-sketch">Etch A Sketch</a></h3>
+                <p>
+                    An awesome browser verson of something between a sketchpad and an Etch-a-Sketch.
+                    I built this to learn DOM manipulation.
                 </p>
             </div>
         </div>
         <div class="all">
-            <a href="#">See all projects</a>
+            View all at <a href="https://github.com/r0hitm?tab=repositories">GitHub</a>.
         </div>
     </section>
 
     <footer>
-        <div class="hire">
+        <!-- <div class="hire">
             <a href="mailto:rohitm09@proton.me">Hire Me!</a>
-        </div>
+        </div> -->
         <p>Designed and built by <a href="http://rrohit.me">Rohit Mehta</a></p>
-        <p>© 2021 Rohit Mehta</p>
+        <!-- <p>Found an error? </p> -->
+        <p>&copy; 2022</p>
     </footer>
 </body>
 
