--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>👋 Rohit Mehta</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="./images/logo.svg" alt="Logo" class="logo">
+                <img src="./images/logo.png" alt="Logo" class="logo">
             </div>
             <div class="nav-nav">
                 <ul class="nav-ul">
