updated to remove freelancing promo bits from the page

--- a/index.html
+++ b/index.html
@@ -13,29 +13,22 @@
 
 <body>
     <header>
-        <nav>
-            <div class="logo">
-                <img src="./images/logo.png" alt="Logo" class="logo">
-            </div>
-            <div class="nav-nav">
-                <ul class="nav-ul">
-                    <li><a href="#projects">Projects</a></li>
-                    <li class="hire"><a href="mailto:rohitm09@proton.me">Hire Me!</a></li>
-                </ul>
-            </div>
-        </nav>
         <h1>👋 Hello, I'm <a href="http://rrohit.me">Rohit Mehta</a></h1>
     </header>
 
     <section class="about">
         <h2>About Me</h2>
         <p>
-            I'm a computer science student who is passionate about creating solutions to problems. I can help you
-            build your next web project, wheteher it's a wordpress site or a from scratch static site.
-            You also desire a personalized domain? I can help you with that too!
-        </p>
-        <p>
-            Don't hesitate to reach out to me. I would love to help you out!
+            I am currently a full-time BSc (Hons) Electronics student who is currently self studying Computer Science
+            <a href="https://github.com/ossu/computer-science" target="_blank" rel="noopener noreferrer">OSSU</a>.
+            And I am also learning Web Development through <a href="https://thodinproject.com" rel="noopener noreferrer">The Odin Project</a>
+            on the side.
+            <br>
+            🌱 I love to learn new things and I am always looking for new ways to improve my skills.
+            <br>
+            I speak: हिन्दी (native), English (fluent), 日本語 (N4).
+
+            Sometimes I make games and upload it to 🎮 <a href="https://avatar-hiro.itch.io" target="_blank" rel="noopener noreferrer">itch.io</a> for everyone to play.
         </p>
 
         <ul class="hl">
